--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
         </pluginManagement>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+    </dependencies>
+
     <description>
         This archetype is creating a full Sling Project composed of
         a OSGi Bundle and a Content Package which can be deployed
